[gd_scene load_steps=12 format=2]

[ext_resource path="res://models/printers.tres" type="Material" id=1]
[ext_resource path="res://models/clear/printer1table.obj" type="ArrayMesh" id=2]
[ext_resource path="res://models/clear/printer1extruder.obj" type="ArrayMesh" id=3]
[ext_resource path="res://models/clear/printer1all.obj" type="ArrayMesh" id=4]
[ext_resource path="res://models/clear/printer1slider.obj" type="ArrayMesh" id=5]
[ext_resource path="res://scripts/printer1cont.gd" type="Script" id=6]
[ext_resource path="res://controls/ItemList.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sound/Default.wav" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
resource_name = "printer1"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("printer1table:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, -0.486235 ), Vector3( 0, 0, 0.0965374 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("printer1slider:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -0.487696, 0 ), Vector3( 0, -0.487696, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("printer1slider/printer1extruder:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.150907, 0, 0 ), Vector3( -0.150907, 0, 0 ), Vector3( -0.960502, 0, 0 ), Vector3( -0.150907, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "printer1clr"
tracks/0/type = "value"
tracks/0/path = NodePath("printer1table:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1.47096e-07, 0, -0.451436 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("printer1slider:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0.404338, 0 ) ]
}

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1.2956, 1.35508, 1.29687 )

[node name="Spatial" type="Spatial"]
transform = Transform( -0.35, 0, -1.14044e-07, 0, 0.35, 0, 1.14044e-07, 0, -0.35, 0, 0, 0 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="printer1all" type="MeshInstance" parent="StaticBody"]
mesh = ExtResource( 4 )
material/0 = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="StaticBody/printer1all"]
pause_mode = 2
playback_process_mode = 0
playback_speed = 0.5
anims/printer1 = SubResource( 1 )
anims/printer1clr = SubResource( 2 )
script = ExtResource( 6 )

[node name="printer1table" type="MeshInstance" parent="StaticBody/printer1all"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="Spatial" type="Spatial" parent="StaticBody/printer1all/printer1table"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.843042, 0 )

[node name="printer1slider" type="MeshInstance" parent="StaticBody/printer1all"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.487696, 0 )
mesh = ExtResource( 5 )
material/0 = ExtResource( 1 )

[node name="printer1extruder" type="MeshInstance" parent="StaticBody/printer1all/printer1slider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.150907, 0, 0 )
mesh = ExtResource( 3 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.34764, 0 )
shape = SubResource( 3 )

[node name="Control" type="Control" parent="StaticBody"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 15
size_flags_vertical = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" parent="StaticBody/Control" instance=ExtResource( 7 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="StaticBody"]
stream = ExtResource( 8 )
[connection signal="input_event" from="StaticBody" to="StaticBody/printer1all/AnimationPlayer" method="_on_StaticBody_input_event"]
[connection signal="gui_input" from="StaticBody/Control" to="StaticBody/printer1all/AnimationPlayer" method="_on_Control_gui_input"]
[connection signal="item_selected" from="StaticBody/Control/ItemList" to="StaticBody/printer1all/AnimationPlayer" method="_on_ItemList_item_selected"]
